--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -15,14 +15,16 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250916_formularz.html">Formularz 2</a></td></tr>
+<tr><td></td><td><a href="20250909_formularz.html">Formularz</a></td></tr>
 <tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
-<tr><td></td><td><a href="20250909_formularze.html"></a></td></tr>
             </table> 
         </div>
         <h2>Strony Internetowe</h2>
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250911_blok.html">Bloki</a></td></tr>
 <tr><td></td><td><a href="20250904_podzialstrony.html">Podział Strony</a></td></tr>
             </table>
         </div>
