--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -44,6 +44,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250917_funkcje.html">Funkcje Tekstu</a></td></tr>
+<tr><td></td><td><a href="20250917_barca.html">Newcastle - Barcelona</a></td></tr>
 <tr><td></td><td><a href="20250917_loteria.html">Loteria</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara2.html">Szyfr Cezara 2</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara.html">Szyfr Cezara</a></td></tr>
