--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250919_notatki.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
+                <span>Notatki</span>
+            </a>
             <a href="20250912_mediumemotik.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
