--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -28,9 +28,9 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
             </a>
-            <a href="20250908_pozytywizm.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1757358985/pozytywizm_bpgemq.png" alt="Pozytywizm">
-                <span>Pozytywizm</span>
+            <a href="20250919_notatki.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
+                <span>Notatki</span>
             </a>
             <a href="20250812_emotkiflagi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
