--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -24,6 +24,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250918_bloki.html">Bloki 2</a></td></tr>
 <tr><td></td><td><a href="20250911_blok.html">Bloki</a></td></tr>
 <tr><td></td><td><a href="20250904_podzialstrony.html">Podział Strony</a></td></tr>
             </table>
@@ -44,11 +45,13 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250922_zlotapilka.html">Złota Piłka</a></td></tr>
 <tr><td></td><td><a href="20250917_funkcje.html">Funkcje Tekstu</a></td></tr>
 <tr><td></td><td><a href="20250917_barca.html">Newcastle - Barcelona</a></td></tr>
 <tr><td></td><td><a href="20250917_loteria.html">Loteria</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara2.html">Szyfr Cezara 2</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara.html">Szyfr Cezara</a></td></tr>
+<tr><td></td><td><a href="notatki.html">Notatki</a></td></tr>
             </table>
         </div>
     </div>
