--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -51,7 +51,7 @@
 <tr><td></td><td><a href="20250917_loteria.html">Loteria</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara2.html">Szyfr Cezara 2</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara.html">Szyfr Cezara</a></td></tr>
-<tr><td></td><td><a href="notatki.html">Notatki</a></td></tr>
+<tr><td></td><td><a href="20250919_notatki.html">Notatki</a></td></tr>
             </table>
         </div>
     </div>
