--- a/20250916_formularz.html
+++ b/20250916_formularz.html
@@ -63,7 +63,7 @@
                 }
             }
 
-            for (i=0; i<gatunek.length-1; i++){
+            for (i=0; i<=gatunek.length-1; i++){
                 if (gatunek[i].checked){
                     tekst = tekst + gatunek[i].value + ", ";
                 }
