--- a/20250922_zlotapilka.html
+++ b/20250922_zlotapilka.html
@@ -195,7 +195,7 @@
         </fieldset>
         <fieldset>
             <legend>Najlepszy Polski</legend>
-            <select name="polska">
+            <select name="polska" multiple>
                 <optgroup label="Piłkarz">
                     <option class="polska" value="Robert Lewandowski">Robert Lewandowski</option>
                     <option class="polska" value="Piotr Zieliński">Piotr Zieliński</option>
