--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250923_flagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
+                <span>Trudne Flagi</span>
+            </a>
+            <a href="20250922_zlotapilka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639534/zlotapilka_zzgyjh.png" alt="Złota Piłka">
+                <span>Złota Piłka</span>
+            </a>
             <a href="20250919_notatki.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
                 <span>Notatki</span>
