--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -32,17 +32,17 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
                 <span>Notatki</span>
             </a>
-            <a href="20250812_emotkiflagi.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
-                <span>Flagi</span>
+            <a href="20250923_flagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
+                <span>Trudne Flagi</span>
             </a>
-            <a href="gry.html" class="app-icon">
+            <a href="index.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
                 <span>Gry</span>
             </a>
-            <a href="aplikacje.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
-                <span>Aplikacje</span>
+            <a href="inne.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
+                <span>Inne</span>
             </a>
         </div>
     </div>
