--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -45,6 +45,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250924_oblicz.html">Obliczenia</a></td></tr>
 <tr><td></td><td><a href="20250922_zlotapilka.html">Złota Piłka</a></td></tr>
 <tr><td></td><td><a href="20250917_funkcje.html">Funkcje Tekstu</a></td></tr>
 <tr><td></td><td><a href="20250917_barca.html">Newcastle - Barcelona</a></td></tr>
