--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -20,13 +20,21 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
                 <span>Szkoła 3</span>
             </a>
+            <a href="verbs.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823572/verbs_nkbuey.png" alt="Verbs">
+                <span>Verbs</span>
+            </a>
+            <a href="adjectives.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823911/adjectives_imvkd0.png" alt="Adjectives">
+                <span>Adjectives</span>
+            </a>
+            <a href="vocabulary.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758824207/vocabulary_pbrxms.png" alt="Vocabulary">
+                <span>Vocabulary</span>
+            </a>
             <a href="20250912_mediumemotik.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
-            </a>
-            <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
-                <span>Angielski</span>
             </a>
             <a href="20250919_notatki.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
