--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250925_angielski.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
+                <span>Angielski</span>
+            </a>
             <a href="20250923_flagi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
                 <span>Trudne Flagi</span>
@@ -223,6 +227,18 @@
             <a href="testy.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
                 <span>Testy</span>
+            </a>
+            <a href="verbs.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823572/verbs_nkbuey.png" alt="Verbs">
+                <span>Verbs</span>
+            </a>
+            <a href="adjectives.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823911/adjectives_imvkd0.png" alt="Adjectives">
+                <span>Adjectives</span>
+            </a>
+            <a href="vocabulary.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758824207/vocabulary_pbrxms.png" alt="Vocabulary">
+                <span>Vocabulary</span>
             </a>
         </div>
     </div>
