--- a/verbs.html
+++ b/verbs.html
@@ -42,20 +42,40 @@
     // DANE - podzielone na łatwe / średnie / trudne
     // Każdy element: {polski:'', angielski:'', inne: ['alt1','alt2']},
     // -----------------------------
-    const easy = [
-    {polski:'należeć', angielski:'belong', inne:['belonged', 'belonged']},
-    {polski:'wspomnieć', angielski:'mention', inne:['mentioned', 'mentioned']},  
+    const easy = [  
+    {polski:'uzupełniać', angielski:'complete', inne:['completed', 'completed']},
+    {polski:'zakryć', angielski:'cover', inne:['covered', 'covered']}, 
     ];
 
     const medium = [
+    {polski:'należeć', angielski:'belong', inne:['belonged', 'belonged']},
+    {polski:'wspomnieć', angielski:'mention', inne:['mentioned', 'mentioned']},
     {polski:'przychodzić', angielski:'come', inne:['came', 'come']}, 
     {polski:'posiadać', angielski:'own', inne:['owned', 'owned']}, 
     {polski:'przynieść', angielski:'bring', inne:['brought', 'brought']}, 
     {polski:'przegapić', angielski:'miss', inne:['missed', 'missed']}, 
     {polski:'zawierać', angielski:'include', inne:['included', 'included']}, 
+    {polski:'opisywać', angielski:'describe', inne:['described', 'described']}, 
+    {polski:'tracić (na wadze)', angielski:'lose', inne:['lost', 'lost']}, 
+    {polski:'zapisywać', angielski:'write down', inne:['wrote down', 'written down']},
+    {polski:'smakować', angielski:'taste', inne:['tasted', 'tasted']},  
+    {polski:'wydarzyć się', angielski:'happen', inne:['happened', 'happened']}, 
+    {polski:'pytać', angielski:'ask', inne:['asked', 'asked']}, 
     ];
 
     const hard = [    
+    {polski:'gotować', angielski:'cook', inne:['cooked', 'cooked']}, 
+    {polski:'wybierać', angielski:'choose', inne:['chose', 'chosen']}, 
+    {polski:'nazwać', angielski:'name', inne:['named', 'named']},  
+    {polski:'pasować', angielski:'fit', inne:['fit/fitted', 'fit/fitted']}, 
+    {polski:'dopasować', angielski:'match', inne:['matched', 'matched']}, 
+    {polski:'odpowiadać', angielski:'answer', inne:['answered', 'answered']}, 
+    {polski:'słuchać', angielski:'listen', inne:['listened', 'listened']}, 
+    {polski:'dawać', angielski:'give', inne:['gave', 'given']}, 
+    {polski:'jeść', angielski:'eat', inne:['ate', 'eaten']}, 
+    {polski:'próbować', angielski:'try', inne:['tried', 'tried']}, 
+    {polski:'widzieć', angielski:'see', inne:['saw', 'seen']}, 
+    {polski:'czuć', angielski:'feel', inne:['felt', 'felt']}, 
     {polski:'świętować', angielski:'celebrate', inne:['celebrated', 'celebrated']}, 
     {polski:'grać', angielski:'play', inne:['played', 'played', 'play music']}, 
     {polski:'wysłać', angielski:'send', inne:['sent', 'sent']}, 
