--- a/adjectives.html
+++ b/adjectives.html
@@ -43,21 +43,41 @@
     // Każdy element: {polski:'', angielski:'', inne: ['alt1','alt2']},
     // -----------------------------
     const easy = [
-   {polski:'dość', angielski:'quite', inne:['rather', 'fairly']},
-   {polski:'wcześniejszy', angielski:'previous', inne:['former', 'prior']},
-   {polski:'policzalny', angielski:'countable', inne:[]},
-   {polski:'liczby mnogiej', angielski:'plural', inne:[]},
-   {polski:'najwyższy', angielski:'superlative', inne:['supreme', 'paramount']},
-   {polski:'niepoliczalny', angielski:'uncountable', inne:[]},
+   {polski:'najmniej zdrowy', angielski:'least healthy', inne:[]},
+   {polski:'prawdopodobny', angielski:'likely', inne:['probable', 'possible']},
+   {polski:'obrzydliwy', angielski:'disgusting', inne:['gross', 'nasty', 'revolting']},
+   {polski:'dodatkowy', angielski:'extra', inne:['additional', 'supplementary']},
+   {polski:'prosty', angielski:'simple', inne:['plain', 'straightforward', 'basic']},
+   {polski:'syty', angielski:'full', inne:['satiated', 'stuffed']},
+   {polski:'kilka', angielski:'several', inne:['some', 'various']},
+   {polski:'jednorazowy', angielski:'once', inne:['one-time', 'single']},
+   {polski:'dwukrotny', angielski:'twice', inne:['double', 'twofold']},
     ];
 
     const medium = [
    {polski:'świetny', angielski:'brilliant', inne:['excellent', 'great', 'genius']},
    {polski:'własny', angielski:'own', inne:[]},
    {polski:'ostatni', angielski:'recent', inne:['new', 'fresh']},
+   {polski:'dość', angielski:'quite', inne:['rather', 'fairly']},
+   {polski:'wcześniejszy', angielski:'previous', inne:['former', 'prior']},
+   {polski:'policzalny', angielski:'countable', inne:[]},
+   {polski:'liczby mnogiej', angielski:'plural', inne:[]},
+   {polski:'najwyższy', angielski:'superlative', inne:['supreme', 'paramount']},
+   {polski:'niepoliczalny', angielski:'uncountable', inne:[]},
+   {polski:'najgorszy', angielski:'worst', inne:['poorest', 'lousiest']},
+   {polski:'smaczny', angielski:'tasty', inne:['flavorful', 'appetizing']},
     ];
 
     const hard = [   
+   {polski:'ulubiony', angielski:'favourite', inne:['preferred', 'beloved']},
+   {polski:'zdrowy', angielski:'healthy', inne:['fit', 'well']},
+   {polski:'wegetariański', angielski:'vegetarian', inne:[]},
+   {polski:'pyszny', angielski:'delicious', inne:['delectable', 'mouthwatering']},
+   {polski:'najlepszy', angielski:'best', inne:['greatest', 'finest']},
+   {polski:'głodny', angielski:'hungry', inne:['starving', 'famished']},
+   {polski:'różny', angielski:'different', inne:['distinct', 'various', 'diverse']},
+   {polski:'wyjątkowy', angielski:'special', inne:['unique', 'particular', 'extraordinary']},
+   {polski:'następny', angielski:'next', inne:['following', 'upcoming']},
    {polski:'pierwszy', angielski:'first', inne:['initial', 'primary']},
    {polski:'prawdopodobny', angielski:'probable', inne:['likely', 'possible']},
    {polski:'ogólny', angielski:'general', inne:['universal', 'common']},
