--- a/vocabulary.html
+++ b/vocabulary.html
@@ -43,17 +43,67 @@
     // Każdy element: {polski:'', angielski:'', inne: ['alt1','alt2']},
     // -----------------------------
     const easy = [
-   {polski:'uczelnia', angielski:'college', inne:['university']},
-   {polski:'śmiech', angielski:'laughing', inne:['laughter']},
+   {polski:'rzecz', angielski:'thing', inne:['object', 'item']},
+   {polski:'przedmiot, produkt', angielski:'item', inne:['object', 'article']},
+   {polski:'danie (w posiłku)', angielski:'course', inne:['dish']},
+   {polski:'leń kanapowy', angielski:'couch potato', inne:['idler']},
+   {polski:'ilość', angielski:'quantity', inne:['amount']},
+   {polski:'paczka', angielski:'packet', inne:['pack']},
+   {polski:'słoik', angielski:'jar', inne:[]},
+   {polski:'kromka, plasterek', angielski:'slice', inne:['piece']},
+   {polski:'płatki zbożowe', angielski:'cereal', inne:['cornflakes']},
+   {polski:'chipsy', angielski:'crisps', inne:['chips']},
+   {polski:'orzechy włoskie', angielski:'walnuts', inne:[]},
     ];
 
     const medium = [
-   {polski:'semestr', angielski:'term', inne:['semester']},
-   {polski:'przekąski', angielski:'snacks', inne:['nibbles', 'treats']},
+   {polski:'śmiech', angielski:'laughing', inne:['laughter']},
    {polski:'rodzajnik', angielski:'article', inne:[]},
     ];
 
     const hard = [
+   {polski:'uczelnia', angielski:'college', inne:['university']},
+   {polski:'semestr', angielski:'term', inne:['semester']},
+   {polski:'przekąski', angielski:'snacks', inne:['nibbles', 'treats']},
+   {polski:'posiłek', angielski:'meal', inne:['repast', 'dish']},
+   {polski:'koszyk', angielski:'basket', inne:['hamper']},
+   {polski:'rodzaj', angielski:'type', inne:['kind', 'sort']},
+   {polski:'słowo', angielski:'word', inne:['term', 'expression']},
+   {polski:'tabela', angielski:'table', inne:['chart']},
+   {polski:'kategoria', angielski:'category', inne:['class', 'group']},
+   {polski:'waga', angielski:'weight', inne:['mass']},
+   {polski:'wyrażenie', angielski:'expression', inne:['phrase']},
+   {polski:'tabliczka (np. czekolady)', angielski:'bar', inne:['slab']},
+   {polski:'pudełko', angielski:'box', inne:['case', 'carton']},
+   {polski:'butelka', angielski:'bottle', inne:[]},
+   {polski:'sok', angielski:'juice', inne:['nectar']},
+   {polski:'obrazek', angielski:'picture', inne:['image', 'photo']},
+   {polski:'pytanie', angielski:'question', inne:['query', 'inquiry']},
+   {polski:'wycieczka, podróż', angielski:'trip', inne:['journey', 'tour']},
+   {polski:'biwak', angielski:'camping', inne:['camp']},
+   {polski:'partner', angielski:'partner', inne:['companion', 'mate']},
+   {polski:'jedzenie', angielski:'food', inne:['meal', 'cuisine']},
+   {polski:'śmietana', angielski:'cream', inne:[]},
+   {polski:'przekąska', angielski:'snack', inne:['nibble', 'treat']},
+   {polski:'produkt', angielski:'product', inne:['good', 'commodity']},
+   {polski:'miód', angielski:'honey', inne:[]},
+   {polski:'chleb', angielski:'bread', inne:['loaf']},
+   {polski:'czekolada', angielski:'chocolate', inne:[]},
+   {polski:'dżem', angielski:'jam', inne:['preserve']},
+   {polski:'masło', angielski:'butter', inne:[]},
+   {polski:'olej', angielski:'oil', inne:['vegetable oil']},
+   {polski:'lody', angielski:'ice cream', inne:['gelato']},
+   {polski:'łosoś', angielski:'salmon', inne:[]},
+   {polski:'kiełbaski', angielski:'sausages', inne:['links']},
+   {polski:'tuńczyk', angielski:'tuna', inne:[]},
+   {polski:'winogrona', angielski:'grapes', inne:[]},
+   {polski:'śliwki', angielski:'plums', inne:[]},
+   {polski:'truskawki', angielski:'strawberries', inne:[]},
+   {polski:'grzyby, pieczarki', angielski:'mushrooms', inne:['fungi']},
+   {polski:'cytryna', angielski:'lemon', inne:[]},
+   {polski:'ziemniaki', angielski:'potatoes', inne:['spuds']},
+   {polski:'marchewki', angielski:'carrots', inne:[]},
+   {polski:'ser', angielski:'cheese', inne:[]},
    {polski:'szef kuchni', angielski:'chef', inne:['cook']},
    {polski:'kartka', angielski:'card', inne:['greeting card']},
    {polski:'impreza', angielski:'party', inne:['celebration', 'gathering']},
