--- a/20250821_frekwencja.html
+++ b/20250821_frekwencja.html
@@ -182,6 +182,7 @@
       <tbody>
         <tr><td>Bocian Bolek</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
         <tr><td>Borsuk Bartek</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
+        <tr><td>Burger Bogdan</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
         <tr><td>Czekolada Celinka</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
         <tr><td>Frytki Filip</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
         <tr><td>Krem Krzyś</td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td><td><select></select></td></tr>
@@ -201,7 +202,7 @@
   <div id="statystyki" class="stats"></div>
 
   <script>
-    const students = ["Bocian Bolek", "Borsuk Bartek", "Czekolada Celinka", "Frytki Filip", "Krem Krzyś", "Lis Lucek", "Meduza Milena", "Pies Dżi-Pi-Es", "Piesek Piotrek", "Sarenka Hania", "Sówka Zosia", "Ważka Wiola", "Zając Zuzia"];
+    const students = ["Bocian Bolek", "Borsuk Bartek", "Burger Bogdan", "Czekolada Celinka", "Frytki Filip", "Krem Krzyś", "Lis Lucek", "Meduza Milena", "Pies Dżi-Pi-Es", "Piesek Piotrek", "Sarenka Hania", "Sówka Zosia", "Ważka Wiola", "Zając Zuzia"];
     const options = ["", "+", "-", "u", "s", "z"];
 
     // Wypełnianie selectów
@@ -217,8 +218,21 @@
     // Zakres tygodni
     const startDate = new Date(2025, 8, 1); // 01.09.2025
     const endDate = new Date(2026, 5, 22);  // 22.06.2026
-    let currentWeek = new Date(startDate);
+    
+    // Ustal aktualny poniedziałek
+    const today = new Date();
+    const day = today.getDay(); // niedziela=0, poniedziałek=1, ..., sobota=6
+    const diff = day === 0 ? -6 : 1 - day; // różnica do poniedziałku
+    let currentWeek = new Date(today);
+    currentWeek.setDate(today.getDate() + diff);
 
+    // Jeżeli przed rozpoczęciem roku szkolnego, zacznij od startDate
+    if (currentWeek < startDate) currentWeek = new Date(startDate);
+    // Jeżeli po zakończeniu roku szkolnego, ustaw na endDate - 4 dni
+    if (currentWeek > endDate) {
+      currentWeek = new Date(endDate);
+      currentWeek.setDate(endDate.getDate() - 4);
+    }
     const kalendarz = document.getElementById("kalendarz");
     const statystyki = document.getElementById("statystyki");
     const btnKal = document.getElementById("btnKalendarz");
