--- a/20250821_oceny.html
+++ b/20250821_oceny.html
@@ -74,9 +74,9 @@
       padding: 5px;
     }
     select {
-      width: 45px;
+      width: 40px;
       padding: 3px;
-      border-radius: 4px;
+      border-radius: 3px;
       border: 1px solid #ccc;
       text-align: center;
     }
@@ -125,6 +125,7 @@
     <tbody>
       <tr><td>Bocian Bolek</td></tr>
       <tr><td>Borsuk Bartek</td></tr>
+      <tr><td>Burger Bogdan</td></tr>
       <tr><td>Czekoladka Celinka</td></tr>
       <tr><td>Frytki Filip</td></tr>
       <tr><td>Krem Krzyś</td></tr>
@@ -140,7 +141,7 @@
   </table>
 
   <script>
-    const students = ["Bocian Bolek", "Borsuk Bartek", "Czekolada Celinka", "Frytki Filip", "Krem Krzyś", "Lis Lucek", "Meduza Milena", "Pies Dżi-Pi-Es", "Piesek Piotrek", "Sarenka Hania", "Sówka Zosia", "Ważka Wiola", "Zając Zuzia"];
+    const students = ["Bocian Bolek", "Borsuk Bartek", "Burger Bogdan", "Czekolada Celinka", "Frytki Filip", "Krem Krzyś", "Lis Lucek", "Meduza Milena", "Pies Dżi-Pi-Es", "Piesek Piotrek", "Sarenka Hania", "Sówka Zosia", "Ważka Wiola", "Zając Zuzia"];
     const subjects = ["Biologia","Geografia","Historia","Informatyka","Język angielski","Język polski","Matematyka","Muzyka","Plastyka","Religia","Technika","Wychowanie Fizyczne"];
     const gradeValues = ["","6","6-","5+","5","5-","4+","4","4-","3+","3","3-","2+","2","2-","1+","1","+","-"];
     const gradePoints = {"6":6,"6-":5.75,"5+":5.25,"5":5,"5-":4.75,"4+":4.25,"4":4,"4-":3.75,"3+":3.25,"3":3,"3-":2.75,"2+":2.25,"2":2,"2-":1.75,"1+":1.25,"1":1};
