--- a/20250821_ocenakoncowa.html
+++ b/20250821_ocenakoncowa.html
@@ -142,7 +142,7 @@
 
   <script>
     const students = [
-      "Bocian Bolek", "Borsuk Bartek", "Czekolada Celinka", "Frytki Filip",
+      "Bocian Bolek", "Borsuk Bartek", "Burger Bogdan", "Czekolada Celinka", "Frytki Filip",
       "Krem Krzyś", "Lis Lucek", "Meduza Milena", "Pies Dżi-Pi-Es",
       "Piesek Piotrek", "Sarenka Hania", "Sówka Zosia",
       "Ważka Wiola", "Zając Zuzia"
