--- a/20251013_fifa.html
+++ b/20251013_fifa.html
@@ -140,14 +140,15 @@
 
   <div id="playoffSection" class="section hidden">
     <h2>Play-Off</h2>
-    <p>👉 Tutaj wklej drabinkę Play-Off (np. półfinały, finał itp.)</p>
+    <p>Półfinał</p>
     <pre>
-<!-- PRZYKŁAD:
-Półfinał 1: Zwycięzca Grupy A - Zwycięzca Grupy B
-Półfinał 2: Zwycięzca Grupy C - Zwycięzca Grupy D
-Finał: Zwycięzca 1 - Zwycięzca 2
--->
+Grupa C 0:0 Grupa B
+Grupa D 0:0 Grupa A
     </pre>
+<p>Finał</p>
+<pre>
+Gracz 0:0 Gracz
+</pre>
   </div>
 
   <script>
