--- a/20251013_fifa.html
+++ b/20251013_fifa.html
@@ -142,8 +142,8 @@
     <h2>Play-Off</h2>
     <p>Półfinał</p>
     <pre>
-Grupa C 0:0 Grupa B
-Grupa D 0:0 Grupa A
+Senger 0:0 Szympans
+Romek 0:0 Cypis
     </pre>
 <p>Finał</p>
 <pre>
