--- a/20251013_fifa.html
+++ b/20251013_fifa.html
@@ -142,12 +142,12 @@
     <h2>Play-Off</h2>
     <p>Półfinał</p>
     <pre>
-Senger 0:0 Szympans
-Romek 0:0 Cypis
+Senger 0:1 Szympans
+Romek 0:1 Cypis
     </pre>
 <p>Finał</p>
 <pre>
-Gracz 0:0 Gracz
+Szympans 1:0 Cypis
 </pre>
   </div>
 
