--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -45,6 +45,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251017_sprawdzian.html">Sprawdzian Formularz</a></td></tr>
 <tr><td></td><td><a href="20251015_kolo.html">Pole i Obwód Koła</a></td></tr>
 <tr><td></td><td><a href="20251008_snieznik.html">Śnieżnik</a></td></tr>
 <tr><td></td><td><a href="20251008_randint.html">Zgadnij Liczbę</a></td></tr>
