--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251013_fifa.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1760726741/fifakobylin_flenst.png" alt="Fifa">
+                <span>Fifa</span>
+            </a>
+            <a href="20250927_turniej.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1760726509/ministrantowdobrzyca_uwmenk.png" alt="Dobrzyca">
+                <span>Dobrzyca</span>
+            </a>
             <a href="20250925_angielski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
