--- a/20251018_cel100km.html
+++ b/20251018_cel100km.html
@@ -174,7 +174,7 @@
       { date: '12 listopada', training: 'Trening w piłkę', week: 4 },
       { date: '13 listopada', training: '10 km', week: 4 },
       { date: '14 listopada', training: '5 km', week: 4 },
-      { date: '15 listopada', training: 'Maraton (5:50 tempo)', week: 5 },
+      { date: '15 listopada', training: 'Maraton 42 km (5:50 tempo)', week: 5 },
       { date: '16 listopada', training: 'Przerwa lub 5 km', week: 5 },
       { date: '17 listopada', training: '5 km regeneracyjny', week: 5 },
       { date: '18 listopada', training: '5 km', week: 5 },
