--- a/20251018_kozmin.html
+++ b/20251018_kozmin.html
@@ -92,15 +92,15 @@
             <tr><td>2</td><td></td><td>Marcisiak Mirosław</td><td>1800</td><td>5.5</td></tr>
             <tr><td>3</td><td></td><td>Puzanow Fedir</td><td>1000</td><td>5.5</td></tr>
             <tr><td>4</td><td>II</td><td>Kozłowski Jarosław</td><td>1600</td><td>5.0</td></tr>
-            <tr><td>5</td><td></td><td>Gustowski Dawid</td><td>1000</td><td>4.5</td></tr>
+            <tr><td>5</td><td>II</td><td>Gustowski Dawid</td><td>1000</td><td>5.0</td></tr>
             <tr><td>6</td><td></td><td>Pestka Stanisław</td><td>1000</td><td>4.5</td></tr>
             <tr><td>7</td><td>III</td><td>Góral Henryk</td><td>1600</td><td>4.5</td></tr>
-            <tr><td>8</td><td>IV</td><td>Kapuściński Przemysław</td><td>1400</td><td>4.5</td></tr>
+            <tr><td>8</td><td>II</td><td>Kapuściński Przemysław</td><td>1400</td><td>4.5</td></tr>
             <tr><td>9</td><td></td><td>Sułkowski Maciej</td><td>1000</td><td>4.5</td></tr>
             <tr><td>10</td><td></td><td>Rekowski Krzysztof</td><td>1800</td><td>4.5</td></tr>
             <tr><td>11</td><td>II</td><td>Gustowska Julia</td><td>1000</td><td>4.5</td></tr>
             <tr><td>12</td><td></td><td>Otworowski Ireneusz</td><td>1800</td><td>4.5</td></tr>
-            <tr><td>13</td><td></td><td>Szeszycki Andrzej</td><td>1800</td><td>4.0</td></tr>
+            <tr><td>13</td><td>I</td><td>Szeszycki Andrzej</td><td>1800</td><td>4.5</td></tr>
             <tr><td>14</td><td>IV</td><td>Frąckowiak Janusz</td><td>1400</td><td>4.0</td></tr>
             <tr><td>15</td><td>IV</td><td>Krzak Andrzej</td><td>1400</td><td>4.0</td></tr>
             <tr><td>16</td><td></td><td>Talaga Jan</td><td>1000</td><td>4.0</td></tr>
@@ -118,7 +118,7 @@
             <tr><td>28</td><td></td><td>Stróżyk Mateusz</td><td>1000</td><td>3.0</td></tr>
             <tr><td>29</td><td></td><td>Panek Karol</td><td>1000</td><td>3.0</td></tr>
             <tr><td>30</td><td></td><td>Kasałka Adam</td><td>1000</td><td>3.0</td></tr>
-            <tr><td>31</td><td></td><td>Panek Tomasz</td><td>1000</td><td>2.5</td></tr>
+            <tr><td>31</td><td></td><td>Panek Tomasz</td><td>1000</td><td>3.0</td></tr>
             <tr><td>32</td><td></td><td>Staśkiewicz Michał</td><td>1000</td><td>2.5</td></tr>
             <tr><td>33</td><td></td><td>Motyl Zenon</td><td>1000</td><td>2.5</td></tr>
             <tr><td>34</td><td>IV</td><td>Petzold Krzysztof</td><td>1400</td><td>2.0</td></tr>
