--- a/20251009_galeria.html
+++ b/20251009_galeria.html
@@ -29,7 +29,7 @@
             <tr><td>2</td><td>2</td><td>1</td></tr>
         </table>
         <p>Polub nas <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761316478/icon-off_pen3ht.png" id="ikona"></p>
-        <a href="https://pixabay.com" target="_blanc">Odkryj więcej zdjęć</a>
+        <a href="index.html" target="_blanc">Odkryj więcej zdjęć</a>
     </aside>
     <footer>
         <p>Autor: 0000000000</p>
