--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -24,6 +24,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251021_bloki3.html">Bloki 3</a></td></tr>
 <tr><td></td><td><a href="20250918_bloki.html">Bloki 2</a></td></tr>
 <tr><td></td><td><a href="20250911_blok.html">Bloki</a></td></tr>
 <tr><td></td><td><a href="20250904_podzialstrony.html">Podział Strony</a></td></tr>
@@ -39,6 +40,10 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251021_formaty.html">Formatowanie</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria3.html">Galeria 3</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria2.html">Galeria 2</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria.html">Galeria</a></td></tr>
             </table>
         </div>
         <h2>Inne</h2>
