--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251027_sokol.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752603290/sokol2_lzrw8f.png" alt="Chwaliszew">
+                <span>Sokół</span>
+            </a>
             <a href="20251013_fifa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1760726741/fifakobylin_flenst.png" alt="Fifa">
                 <span>Fifa</span>
