--- a/inne.html
+++ b/inne.html
@@ -16,6 +16,14 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752603290/sokol2_lzrw8f.png" alt="Chwaliszew">
                 <span>Sokół</span>
             </a>
+            <a href="20251018_cel100km.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761590152/ultra100km_qqwtcz.png" alt="Ultra 100 km">
+                <span>Ultra 100 km</span>
+            </a>
+            <a href="20251018_kozmin.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761590221/kozminszachy_o7ybis.png" alt="Koźmin">
+                <span>Koźmin</span>
+            </a>
             <a href="20251013_fifa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1760726741/fifakobylin_flenst.png" alt="Fifa">
                 <span>Fifa</span>
@@ -270,7 +278,7 @@ for (let i = apps.length - 1; i > 0; i--) {
 }
 
 // Wybieramy 10 pierwszych
-let selectedApps = apps.slice(0, 20);
+let selectedApps = apps.slice(0, 30);
 
 // Czyścimy i dodajemy do kontenera
 let container = document.querySelector('.buttons');
